--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип">
       <div class="header header__title">
         Научиться учиться
       </div>
@@ -95,7 +95,7 @@
           <h3>от Джоша Кауфмана</h3>
         </div>
         <div class="table table_theme_dark">
-          <table id="table__cell table__cell_theme_dark">
+          <table class="table__cell table__cell_theme_dark">
             <tr class="table__heading_theme_dark">
               <th>1</th>
               <th>2</th>
@@ -132,7 +132,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип">
           <div class="footer__author">
             &copy;Svetlana
           </div>
@@ -147,15 +147,15 @@
           <div style="margin-top: 20px; margin-bottom: 16px;">
           <div class="footer__column-links footer__column-link">
             <a href="#" class="footer__social-icon">
-              <img src="./images/facebook_color_white.svg"> Facebook</a>
+              <img src="./images/facebook_color_white.svg" alt="иконка"> Facebook</a>
           </div>
           <div class="footer__column-links footer__column-link">
             <a href="#" class="footer__social-icon">
-              <img src="./images/vk_color_white.svg">В Контакте</a>
+              <img src="./images/vk_color_white.svg" alt="иконка">В Контакте</a>
           </div>
           <div class="footer__column_links footer__column-link">
             <a href="#" class="footer__social-icon">
-              <img src="./images/instagram_color_white.svg"> Instagram</a>
+              <img src="./images/instagram_color_white.svg" alt="иконка"> Instagram</a>
           </div> 
           </div>
         </div>
