--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип">
-      <h2 class="header__title">Научиться учиться</h2>
+      <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать--></a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Здесь картинка школьника">
       <div class="header__square-pic">
@@ -20,7 +20,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h4 class="two-columns__brief">главные проблемы в обучении</h4>
+          <h2 class="two-columns__brief">главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему то этому мало где учат.Что с этим делать?</p>
@@ -49,8 +49,6 @@
             <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-        </ul>
-        <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
@@ -100,8 +98,6 @@
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-        </ul>
-        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
@@ -128,12 +124,12 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип">
           <p class="footer__author">&copy;Svetlana</p>
         </div>
-        <div class="footer footer__column_content_info">
-          <h4 class="footer__column-heading">О практикуме</h4>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
           <nav class="footer__column-links">
             <ul class="footer__list">
               <li>
@@ -148,8 +144,8 @@
             </ul>
           </nav>
         </div>
-        <div class="footer footer__column_content_social">
-          <h4 class="footer__column-heading">Соцсети</h4>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
             <ul class="footer__list">
               <li>
