--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать--></a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать&rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Здесь картинка школьника">
       <div class="header__square-pic">
       </div>
@@ -20,7 +20,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief">главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему то этому мало где учат.Что с этим делать?</p>
@@ -71,7 +71,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a class="feynman__link">Подробнее-></a>
+        <a href="#" class="feynman__link">Подробнее&rarr;</a>
         <img class="feynman__img" src="./images/feynman.png" alt="Портрет Фейнмана">
       </section>
       <section class="kaufman">
@@ -133,13 +133,13 @@
           <nav class="footer__column-links">
             <ul class="footer__list">
               <li>
-                <a class="footer__column-link">Главная</a>
+                <a href="#" class="footer__column-link">Главная</a>
               </li>
               <li>
-                <a class="footer__column-link">Концепция</a>
+                <a href="#" class="footer__column-link">Концепция</a>
               </li>
               <li>
-                <a class="footer__column-link">Наставники</a>
+                <a href="#" class="footer__column-link">Наставники</a>
               </li>
             </ul>
           </nav>
@@ -149,19 +149,19 @@
           <nav class="footer__column-links">
             <ul class="footer__list">
               <li>
-                <a class="footer__column-link">
+                <a href="#" class="footer__column-link">
                   <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка">
                   Facebook
                 </a>
               </li>
               <li>
-                <a class="footer__column-link">
+                <a href="#" class="footer__column-link">
                   <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка">
                   В Контакте
                   </a>
               </li>
               <li>
-                <a class="footer__column-link">
+                <a href="#" class="footer__column-link">
                   <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка">
                   Instagram
                 </a>
