--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
         <ul class="video__iframes">
           <li class="video__iframe"> 
             <iframe id="ytplayer" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/M7lc1UVf-VE"
-            frameborder="0" allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/M7lc1UVf-VE"></iframe>
           </li>
           <li class="video__iframe">
             <iframe id="ytplayer" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/arj7oStGLkU"
-            frameborder="0" allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           </li>
         </ul>
       </section>
@@ -137,7 +135,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="карта"></img>
+            <img class="khan__book-pic" src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="карта">
             <a href="#" class="khan__buy-link">Купить книгу&rarr;</a>
           </div>
         </div>
