--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <ul class="video__iframes">
           <li class="video__iframe"> 
-            <iframe width="515" height="316"
-            src="https://www.youtube.com/embed/M7lc1UVf-VE" style="border: 0;"></iframe>
+            <iframe id="ytplayer" type="text/html" style="border: none; width: 515; height: 316;" width="515" height="316"
+            src="https://www.youtube.com/embed/M7lc1UVf-VE"></iframe>
           </li>
           <li class="video__iframe">
-            <iframe width="515" height="316"
-            src="https://www.youtube.com/embed/arj7oStGLkU" style="border: 0"></iframe>
+            <iframe id="ytplayer" type="text/html" style="border: none; width: 515; height: 316;" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           </li>
         </ul>
       </section>
