--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" alt="арзамас">
-          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" alt="№+1">
+          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" alt="номер">
           <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" alt="стрелка">
           <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" alt="полка">
         </div>
