--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать&rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Здесь картинка школьника">
-      <div class="header__square-pic header__square-pic__rotation">
+      <div class="header__square-pic header__square-pic_type_rotation">
       </div>
     </header>
     <main class="content">
@@ -48,12 +48,12 @@
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image card__image" src="./sprint-2-sources/images_sprint-2/cards-question.png" alt="картинка внутри пустого здания">
+            <img class="cards__image" src="./sprint-2-sources/images_sprint-2/cards-question.png" alt="картинка внутри пустого здания">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image card__image" src="./sprint-2-sources/images_sprint-2/cards-competence.png" alt="на руке книги">
+            <img class="cards__image" src="./sprint-2-sources/images_sprint-2/cards-competence.png" alt="на руке книги">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -185,7 +185,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle kaufman__triangle__rotation"></div>
+        <div class="kaufman__triangle kaufman__triangle_type_rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
