--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes"> 
           <iframe class="video__iframe" id="ytplayer-1"
-          src="https://www.youtube.com/embed/M7lc1UVf-VE"></iframe>
+          src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
           <iframe class="video__iframe" id="ytplayer-2"
           src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
         </div>
@@ -185,12 +185,28 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" alt="арзамас">
-          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" alt="номер">
-          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" alt="стрелка">
-          <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" alt="полка">
-        </div>
+        <ul class="resources__logo-zone">
+          <li>
+            <a href="#">
+              <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" alt="арзамас">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" alt="номер">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" alt="стрелка">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="resources__logo" src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" alt="полка">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
